@@ -1,3 +1,5 @@
+* [Bug 399] NMEA refclock driver does not honor time1 offset if flag3 set.
+* [Bug 985] Modifications to NMEA reference clock driver to support Accord GPS Clock.
 * [Bug 1022] Fix compilation problems with yesterday's commit.
 * Updates and cleanup from Dave Mills:
   I've now spent eleven months of a sabbatical year - 7 days a week, 6-10
